--- a/FUNCIONÁRIO(ADM)/infoLivroRecomendacao/index.html
+++ b/FUNCIONÁRIO(ADM)/infoLivroRecomendacao/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="editar">
-            <a href="/FUNCIONÁRIO(ADM)/perfil/"><button class="reserv-button">Reservar livro</button></a>
+            <a href="/FUNCIONÁRIO(ADM)/reservarLivro/"><button class="reserv-button">Reservar livro</button></a>
         </div>
     </div>
 </main>
