--- a/FUNCIONÁRIO(ADM)/reservarLivro/index.html
+++ b/FUNCIONÁRIO(ADM)/reservarLivro/index.html
@@ -35,50 +35,15 @@
     </div>
 
 <main>
-    <h1 class="add-livro-novo">Adicionar livro novo</h1>
-
+    <h1 class="informacoes">Reservar livro</h1>
+   
     <div class="container">
-        <div class="input-total">
-            <div class="input-img-container">
-                <div class="img-book">
-                    <p class="text-capa">Capa:</p>
-                    <label for="file-upload" class="upload-button">Escolher Imagem</label>
-                    <input id="file-upload" type="file" accept="image/*" class="input-wrapper">
-                </div>
-                <div class="input-group">
-                    <text class="text">Quantidade:</text>
-                    <input type="number" class="input-quant">
-                </div>
-            </div>
-            <div class="input-container">
-                <div class="input-group">
-                    <p class="text-input">Nome:</p>
-                    <input type="text" class="input-field">
-                </div>
-                <div class="input-group">
-                    <p class="text-input">Autor:</p>
-                    <input type="text" class="input-field">
-                </div>
-                <div class="input-group">
-                    <p class="text-input">Editora:</p>
-                    <input type="text" class="input-field">
-                </div>
-                <div class="input-group">
-                    <text class="text-input">Gênero:</text>
-                    <input type="text" class="input-field">
-                </div>
-                <div class="input-group">
-                    <text class="text-input">Resumo:</text>
-                    <textarea id="resumo" name="resumo" class="input-resumo" ></textarea>
-                </div>
-            </div>
-        </div>
+       
         <div class="editar">
-            <a href="/FUNCIONÁRIO(ADM)/biblioteca/"><button class="add-button">Adicionar</button></a>
+            <a href="/FUNCIONÁRIO(ADM)/perfil/"><button class="reserv-button">Finalizar reserva</button></a>
         </div>
     </div>
 </main>
-
     <footer>
         <div>
             Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
