--- a/FUNCIONÁRIO(ADM)/perfilEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/perfilEditar/index.html
@@ -41,7 +41,7 @@
         <div class="p-i-container">
             <div class="profile-container">
                 <div class="img-container">
-                    <img src="/imagens_telas/perfil.png" alt="Foto de perfil">
+                    <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
                 </div>
                 <form action="/upload" method="post" enctype="multipart/form-data">
                     <label for="fileInput" class="custom-file-upload">
