--- a/FUNCIONÁRIO(ADM)/perfil/index.html
+++ b/FUNCIONÁRIO(ADM)/perfil/index.html
@@ -40,7 +40,7 @@
         <div class="p-i-container">
             <div class="profile-container">
                 <div class="img-container">
-                    <img src="/imagens_telas/perfil.png" alt="Foto de perfil">
+                    <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
                 </div>
             </div>
             <div class="input-container">
