--- a/FUNCIONÁRIO(ADM)/emprestimos/index.html
+++ b/FUNCIONÁRIO(ADM)/emprestimos/index.html
@@ -57,7 +57,7 @@
 </main>
     <footer>
         <div>
-            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
         </div>
     </footer>
 </body>
