--- a/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
@@ -81,7 +81,7 @@
 
     <footer>
         <div>
-            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
         </div>
     </footer>
 </body>
