--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
@@ -58,7 +58,7 @@ E136DIR@CPS.SP.GOV.BR</textarea>
 </main>
     <footer>
         <div>
-            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
         </div>
     </footer>
 </body>
