--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/index.html
@@ -58,7 +58,7 @@ E136DIR@CPS.SP.GOV.BR</textarea>
 </main>
     <footer>
         <div>
-            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/">Danikawari</a>
         </div>
     </footer>
 </body>
