--- a/FUNCIONÁRIO(ADM)/selecao/index.html
+++ b/FUNCIONÁRIO(ADM)/selecao/index.html
@@ -99,7 +99,7 @@
 </main>
     <footer>
         <div>
-            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/">Danikawari</a>
         </div>
     </footer>
 </body>
