--- a/FUNCIONÁRIO(ADM)/addLivroExistente/index.html
+++ b/FUNCIONÁRIO(ADM)/addLivroExistente/index.html
@@ -67,7 +67,7 @@
     </div>
     <footer>
         <div>
-            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/">books@gmail.com</a>
         </div>
     </footer>
 </body>
