--- a/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/index.html
@@ -81,7 +81,7 @@
 
     <footer>
         <div>
-            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/">Danikawari</a>
         </div>
     </footer>
 </body>
