--- a/FUNCIONÁRIO(ADM)/infoContato/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContato/index.html
@@ -51,7 +51,7 @@
 </main>
     <footer>
         <div>
-            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/">Danikawari</a>
         </div>
     </footer>
 </body>
