--- a/FUNCIONÁRIO(ADM)/perfil/index.html
+++ b/FUNCIONÁRIO(ADM)/perfil/index.html
@@ -88,7 +88,7 @@
 </div>
     <footer>
         <div>
-            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/" target="_blank">Danikawari</a>
+            Desenvolvido por <a href="/FUNCIONÁRIO(ADM)/sobreNos/">Danikawari</a>
         </div>
     </footer>
 </body>
