--- a/FUNCIONÁRIO(ADM)/sobreNos/index.html
+++ b/FUNCIONÁRIO(ADM)/sobreNos/index.html
@@ -8,11 +8,40 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="background">
-        
+        <div class="conteudo">
+            <div class="header">
+                <h1>Sobre Nós</h1>
+                <p>Somos uma equipe de três mulheres dedicadas e estudantes de programação, unidas pelo 
+                    interesse comum em desenvolver soluções tecnológicas práticas e de fácil acesso a informação.</p>
+                <p>Conheça um pouco mais sobre cada uma de nós:</p>
+            </div>
+            <div class="membros-container">
+                <div class="membros">
+                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                        nosso projeto.</text>
+                </div>
+
+                <div class="membros">
+                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                        nosso projeto.</text>
+                </div>
+
+                <div class="membros">
+                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                        nosso projeto.</text>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- fazer uma página que só vai aparecer quando clicar no link do 'desenvolvido por'
     uma page falando sobre a gente, as desenvolvedoras, com o jeito que eu quiser 
