--- a/FUNCIONÁRIO(ADM)/sobreNos/index.html
+++ b/FUNCIONÁRIO(ADM)/sobreNos/index.html
@@ -12,33 +12,35 @@
 </head>
 <body>
     <div class="background">
-        <div class="conteudo">
-            <div class="header">
-                <h1>Sobre Nós</h1>
-                <p>Somos uma equipe de três mulheres dedicadas e estudantes de programação, unidas pelo 
-                    interesse comum em desenvolver soluções tecnológicas práticas e de fácil acesso a informação.</p>
-                <p>Conheça um pouco mais sobre cada uma de nós:</p>
-            </div>
-            <div class="membros-container">
-                <div class="membros">
-                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                        nosso projeto.</text>
+            <div class="conteudo">
+                <div class="box">
+                <div class="header">
+                    <h1>Sobre Nós</h1>
+                    <p>Somos uma equipe de três mulheres dedicadas e estudantes de programação, unidas pelo 
+                        interesse comum em desenvolver soluções tecnológicas práticas e de fácil acesso a informação.</p>
+                    <p>Conheça um pouco mais sobre cada uma de nós:</p>
                 </div>
+                <div class="membros-container">
+                    <div class="membros">
+                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                            nosso projeto.</text>
+                    </div>
 
-                <div class="membros">
-                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                        nosso projeto.</text>
-                </div>
+                    <div class="membros">
+                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                            nosso projeto.</text>
+                    </div>
 
-                <div class="membros">
-                    <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                        sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                        Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                        nosso projeto.</text>
+                    <div class="membros">
+                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
+                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
+                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
+                            nosso projeto.</text>
+                    </div>
                 </div>
             </div>
         </div>
