--- a/FUNCIONÁRIO(ADM)/sobreNos/index.html
+++ b/FUNCIONÁRIO(ADM)/sobreNos/index.html
@@ -13,12 +13,11 @@
 <body>
     <div class="background">
             <div class="conteudo">
-                <div class="box">
+                <div class="card">
                 <div class="header">
                     <h1>Sobre Nós</h1>
                     <p>Somos uma equipe de três mulheres dedicadas e estudantes de programação, unidas pelo 
                         interesse comum em desenvolver soluções tecnológicas práticas e de fácil acesso a informação.</p>
-                    <p>Conheça um pouco mais sobre cada uma de nós:</p>
                 </div>
                 <div class="membros-container">
                     <div class="membros">
