--- a/FUNCIONÁRIO(ADM)/selecao/index.html
+++ b/FUNCIONÁRIO(ADM)/selecao/index.html
@@ -36,7 +36,10 @@
 
 <main>
     <h1 class="selecao">Seleção de usuários</h1>
-
+    <div class="search-container">
+        <input type="text" placeholder="Procurar" id="search-input">
+        <button type="button"><span class="material-symbols-outlined">search</span></button>
+    </div>
     <div class="container">
         <div class="lineSquare">
             <div class="input-container">
