--- a/FUNCIONÁRIO(ADM)/infoContato/index.html
+++ b/FUNCIONÁRIO(ADM)/infoContato/index.html
@@ -46,7 +46,7 @@
                 E136DIR@CPS.SP.GOV.BR</text>
     </div>
     <div class="editar">
-        <a href="/FUNCIONÁRIO(ADM)/infoContatoEditar/"><button type="submit" class="cadastro-button"><img src="/imagens_telas/editar_perfil.png"></button></a>
+        <a href="/FUNCIONÁRIO(ADM)/infoContatoEditar/"><button type="submit" class="editar-button"><img src="/imagens_telas/editar_perfil.png"></button></a>
     </div>
 </main>
     <footer>
