--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -11,20 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <div class="background">
+        <div class="transparencia">
             <div class="conteudo">
                 <div class="card">
                 <div class="header">
                     <h1>Sobre Nós</h1>
-                    <p>Somos uma equipe de três mulheres dedicadas e estudantes de programação, unidas pelo 
-                        interesse comum em desenvolver soluções tecnológicas práticas e de fácil acesso a informação.</p>
+                    <p>Danikawari é a junsão dos nomes das três ingrantes que unidas pelo interesse comum em desenvolver e pela T.I.,
+                        criaram a SmoakBook, um aplicativo que visa favorecer alunos e professores em prol da educação, atualizando o 
+                        sistema de bibliotecas, visualmente mais atrativo e sendo mais prático à todos.</p>
                 </div>
                 <div class="membros-container">
                     <div class="membros">
-                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                            nosso projeto.</text>
+                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem-Marilía, mas decidiu se aprofundar na área do desenvolvimento
+                            para consciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
+                            abandonou o lado criativo.
+                        </text>
                     </div>
 
                     <div class="membros">
@@ -35,15 +38,16 @@
                     </div>
 
                     <div class="membros">
-                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                            nosso projeto.</text>
+                        <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
+                            verificar se era realmente isso que ela queria para a vida dela, engressando na área de T.I. e conforme o decorrer
+                            das aulas, foi se interessando pelo back-end e pela segurança de dados.
+                        </text>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
     <!-- fazer uma página que só vai aparecer quando clicar no link do 'desenvolvido por'
     uma page falando sobre a gente, as desenvolvedoras, com o jeito que eu quiser 
     programar o front, sem cores específicas
