--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -25,7 +25,7 @@
                 <div class="membros-container">
                     <div class="membros">
                         <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem-Marilía, mas decidiu se aprofundar na área do desenvolvimento
-                            para consciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
+                            para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
                             abandonou o lado criativo.
                         </text>
                     </div>
@@ -39,7 +39,7 @@
 
                     <div class="membros">
                         <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
-                            verificar se era realmente isso que ela queria para a vida dela, engressando na área de T.I. e conforme o decorrer
+                            verificar se era realmente isso que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer
                             das aulas, foi se interessando pelo back-end e pela segurança de dados.
                         </text>
                     </div>
