--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -24,13 +24,7 @@
                 </div>
                 <div class="membros-container">
                     <div class="membros">
-                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem-Marilía, mas decidiu se aprofundar na área do desenvolvimento
-                            para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
-                            abandonou o lado criativo.
-                        </text>
-                    </div>
-
-                    <div class="membros">
+                        <img src="/imagens_telas/avatarDani.jpeg" alt="Avatar Danielle" class="imagem-flutuante">
                         <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
                             sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
                             Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
@@ -38,11 +32,21 @@
                     </div>
 
                     <div class="membros">
+                        <img src="/imagens_telas/avatarKawany.jpeg" alt="Avatar Kawany" class="imagem-flutuante">
                         <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
                             verificar se era realmente isso que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer
                             das aulas, foi se interessando pelo back-end e pela segurança de dados.
                         </text>
                     </div>
+
+                    <div class="membros">
+                        <img src="/imagens_telas/avatarKian.jpeg" alt="Avatar Kian" class="imagem-flutuante">
+                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem-Marilía, mas decidiu se aprofundar na área do desenvolvimento
+                            para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
+                            abandonou o lado criativo.
+                        </text>
+                    </div>
+
                 </div>
             </div>
         </div>
