--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -41,7 +41,7 @@
 
                     <div class="membros">
                         <img src="/imagens_telas/avatarKian.jpeg" alt="Avatar Kian" class="imagem-flutuante">
-                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem-Marilía, mas decidiu se aprofundar na área do desenvolvimento
+                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem em Marilía, mas decidiu se aprofundar na área do desenvolvimento
                             para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
                             abandonou o lado criativo.
                         </text>
