--- a/telaInicial/index.html
+++ b/telaInicial/index.html
@@ -34,7 +34,7 @@
         </nav>
     <main>
         <div class="search-container">
-            <input type="text" placeholder="Procurar" id="search-input">
+            <input type="text" placeholder="Pesquisar" id="search-input">
             <button type="button"><span class="material-symbols-outlined">search</span></button>
         </div>
         <div class="img">
