--- a/biblioteca/index.html
+++ b/biblioteca/index.html
@@ -38,7 +38,7 @@
         <h1 class="biblioteca">Biblioteca</h1>
         <a href="#addModal"><button class="add-button">+ Adicionar</button></a>
     <div class="search-container">
-        <input type="text" placeholder="Procurar" id="search-input">
+        <input type="text" placeholder="Pesquisar" id="search-input">
         <button type="button"><span class="material-symbols-outlined">search</span></button>
     </div>
 
