--- a/emprestimos/index.html
+++ b/emprestimos/index.html
@@ -37,7 +37,7 @@
 <main>
     <h1 class="emprestimo">Empréstimos</h1>
     <div class="search-container">
-        <input type="text" placeholder="Procurar" id="search-input">
+        <input type="text" placeholder="Pesquisar" id="search-input">
         <button type="button"><span class="material-symbols-outlined">search</span></button>
     </div>
     <div class="container">
