--- a/perfil/index.html
+++ b/perfil/index.html
@@ -74,6 +74,10 @@
                         <input type="radio" name="opcao" value="neutro" disabled>
                         Neutro
                     </label>
+                    <label>
+                        <input type="radio" name="opcao" value="padrao" disabled>
+                        Padrão
+                    </label>
                 </form>
             </div>
         </div>
