--- a/perfilEditar/index.html
+++ b/perfilEditar/index.html
@@ -84,6 +84,10 @@
                         <input type="radio" name="opcao" value="neutro">
                         Neutro
                     </label>
+                    <label>
+                        <input type="radio" name="opcao" value="padrao">
+                        Padrão
+                    </label>
                 </form>
             </div>
         </div>
