--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -25,10 +25,10 @@
                 <div class="membros-container">
                     <div class="membros">
                         <img src="/imagens_telas/avatarDani.jpeg" alt="Avatar Danielle" class="imagem-flutuante">
-                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela atuava anteriormente. No entanto, 
-                            sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no mundo do desenvolvimento. 
-                            Sua determinação, curiosidade e perspectiva diversificada têm sido essenciais para o progresso do 
-                            nosso projeto.</text>
+                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela 
+                            atuava anteriormente. No entanto, sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no 
+                            mundo do desenvolvimento. Ela se desafiou no front-end e foi a responsável por toda a parte visual do projeto, 
+                            mas tem bastante interesse no back-end.</text>
                     </div>
 
                     <div class="membros">
