--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -1,63 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmoakBook</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-</head>
-<body>
-    
-    <div class="background">
-        <div class="transparencia">
-            <div class="conteudo">
-                <div class="card">
-                <div class="header">
-                    <h1>Sobre Nós</h1>
-                    <p>Danikawari é a junsão dos nomes das três ingrantes que unidas pelo interesse comum em desenvolver e pela T.I.,
-                        criaram a SmoakBook, um aplicativo que visa favorecer alunos e professores em prol da educação, atualizando o 
-                        sistema de bibliotecas, visualmente mais atrativo e sendo mais prático à todos.</p>
-                </div>
-                <div class="membros-container">
-                    <div class="membros">
-                        <img src="/imagens_telas/avatarDani.jpeg" alt="Avatar Danielle" class="imagem-flutuante">
-                        <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela 
-                            atuava anteriormente. No entanto, sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no 
-                            mundo do desenvolvimento. Ela se desafiou no front-end e foi a responsável por toda a parte visual do projeto, 
-                            mas tem bastante interesse no back-end.</text>
-                    </div>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SmoakBook</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="background">
+            <div class="transparencia">
+                <div class="conteudo">
+                    <div class="card">
+                        <div class="header">
+                            <h1>Sobre Nós</h1>
+                            <p>Danikawari é a junsão dos nomes das três ingrantes que unidas pelo interesse comum em desenvolver e pela T.I.,
+                                criaram a SmoakBook, um aplicativo que visa favorecer alunos e professores em prol da educação, atualizando o 
+                                sistema de bibliotecas, visualmente mais atrativo e sendo mais prático à todos.
+                            </p>
+                        </div>
+                        <div class="membros-container">
+                            <div class="membros">
+                                <img src="/imagens_telas/avatarDani.jpeg" alt="Avatar Danielle" class="imagem-flutuante">
+                                <text class="nome">Danielle: </text><text>é formada como técnica em farmácia, uma área na qual ela 
+                                    atuava anteriormente. No entanto, sua paixão pelo aprendizado e pela tecnologia a levou a se aventurar no 
+                                    mundo do desenvolvimento. Ela se desafiou no front-end e foi a responsável por toda a parte visual do projeto, 
+                                    mas tem bastante interesse no back-end.</text>
+                            </div>
 
-                    <div class="membros">
-                        <img src="/imagens_telas/avatarKawany.jpeg" alt="Avatar Kawany" class="imagem-flutuante">
-                        <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
-                            verificar se era realmente isso que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer
-                            das aulas, foi se interessando pelo back-end e pela segurança de dados.
-                        </text>
-                    </div>
+                            <div class="membros">
+                                <img src="/imagens_telas/avatarKawany.jpeg" alt="Avatar Kawany" class="imagem-flutuante">
+                                <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
+                                    verificar se era realmente isso que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer
+                                    das aulas, foi se interessando pelo back-end e pela segurança de dados.
+                                </text>
+                            </div>
 
-                    <div class="membros">
-                        <img src="/imagens_telas/avatarKian.jpeg" alt="Avatar Kian" class="imagem-flutuante">
-                        <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem em Marilía, mas decidiu se aprofundar na área do desenvolvimento
-                            para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se desafiar no banco de dados e API, mas nunca 
-                            abandonou o lado criativo.
-                        </text>
+                            <div class="membros">
+                                <img src="/imagens_telas/avatarKian.jpeg" alt="Avatar Kian" class="imagem-flutuante">
+                                <text class="nome">Sayuri: </text><text>Formada em design gráfico pela Univem em Marilía, mas decidiu se aprofundar na 
+                                    área do desenvolvimento para conciliar os seus conhecimentos. Como já tinha conhecimento no front, ela resolveu se 
+                                    desafiar no banco de dados e API, mas nunca abandonou o lado criativo.
+                                </text>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
-    </div>
-</div>
-    <!-- fazer uma página que só vai aparecer quando clicar no link do 'desenvolvido por'
-    uma page falando sobre a gente, as desenvolvedoras, com o jeito que eu quiser 
-    programar o front, sem cores específicas
-    layout de acordo com as cores favoritas de cada uma
-    sayuri:vermelho
-    dani:azul
-    kawany:preto -->
-</body>
+    </body>
 </html>
