--- a/addLivroExistente/index.html
+++ b/addLivroExistente/index.html
@@ -1,74 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmoakBook</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-</head>
-<body>
-    <div class="header">
-            <div class="retangGreen">
-                <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
-                <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SmoakBook</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+    </head>
+    <body>
+        <div class="header">
+                <div class="retangGreen">
+                    <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
+                    <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+                </div>
+                <div class="retangOrange"></div>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a>
+                    </li>
+                    <li>
+                        <a href="/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a>
+                    </li>
+                    <li>
+                        <a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a>
+                    </li>
+                    <li>
+                        <a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a>
+                    </li>
+                    <li>
+                        <a href="/biblioteca/" class="active"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a>
+                    </li>
+                    <li>
+                        <a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a>
+                    </li>
+                    <li>
+                        <a href="/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a>
+                    </li>
+                    <li>
+                        <a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a>
+                    </li>
+                    <li>
+                        <a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a>
+                    </li>
+                    <li>
+                        <a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <main>
+            <h1 class="add-livro-existente">Adicionar livro existente</h1>
+
+            <div class="container">
+                <div>
+                    <p class="p-usuario"> Selecione o livro:</p>
+                    <div class="opcao">
+                        <select id="options" class="select-input">
+                            <option value="" 
+                                disabled selected>
+                                Selecione uma opção
+                            </option>
+                            <option value="OdiáriodeAnneFrank(AnneFrank)">
+                                O diário de Anne Frank - Anne Frank
+                            </option>
+                            <option value="DomCasmurro(MachadodeAssis)">
+                                Dom Casmurro - Machado de Assis
+                            </option>
+                            <option value="RomeueJulieta(WilliamShakespeare)">
+                                Romeu e Julieta - William Shakespeare
+                            </option>
+                            <option value="1984(GeorgeOrwell)">
+                                1984 - George Orwell
+                            </option>
+                            <option 
+                                value="OsMiseráveis(VictorHugo)">
+                                Os Miseráveis - Victor Hugo
+                            </option>
+                            <option value="OrgulhoePreconceito(JaneAusten)">
+                                Orgulho e Preconceito - Jane Austen
+                            </option>
+                            <option value="Verity(CollenHoover)">
+                                Verity - Collen Hoover
+                            </option>
+                            <option value="Heartstopper(AliceOseman)">
+                                Heartstopper - Alice Oseman
+                            </option>
+                            <option value="Deixadaparatrás(CharlieDonlea)">
+                                Deixada para trás - Charlie Donlea
+                            </option>
+                            <option value="Arevoluçãodosbichos(GeorgeOrwell)">
+                                A revolução dos bichos - George Orwell
+                            </option>
+                            <option value="Procurenascinzas(CharlieDonlea)">
+                                Procure nas cinzas - Charlie Donlea
+                            </option>
+                            <option value="HarryPottereaPedraFilosofal(J.K.Rowling)">
+                                Harry Potter e a Pedra Filosofal - J.K. Rowling
+                            </option>
+                            <option value="Ossetemaridosdeevelynhugo(TaylorJekinsReid)">
+                                Os Sete Maridos de Evelyn Hugo - Taylor Jekins Reid
+                            </option>
+                            <option value="Agarotadolago(CharlieDonlea)">
+                                A Garota do Lago - Charlie Donlea
+                            </option>
+                            <option value="Dracula(BramStoker)">
+                                Drácula - Bram Stoker
+                            </option>
+                        </select>
+                </div>
             </div>
-            <div class="retangOrange"></div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
-                <li><a href="/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
-                <li><a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
-                <li><a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
-                <li><a href="/biblioteca/" class="active"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-                <li><a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-                <li><a href="/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-                <li><a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-                <li><a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
-                <li><a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
-            </ul>
-        </nav>
-    </div>
-
-<main>
-    <h1 class="add-livro-existente">Adicionar livro existente</h1>
-
-    <div class="container">
-        <div>
-            <p class="p-usuario"> Selecione o livro:</p>
-            <div class="opcao">
-                <select id="options" class="select-input">
-                    <option value="" disabled selected>Selecione uma opção</option>
-                    <option value="OdiáriodeAnneFrank(AnneFrank)">O diário de Anne Frank - Anne Frank</option>
-                    <option value="DomCasmurro(MachadodeAssis)">Dom Casmurro - Machado de Assis</option>
-                    <option value="RomeueJulieta(WilliamShakespeare)">Romeu e Julieta - William Shakespeare</option>
-                    <option value="1984(GeorgeOrwell)">1984 - George Orwell</option>
-                    <option value="OsMiseráveis(VictorHugo)">Os Miseráveis - Victor Hugo</option>
-                    <option value="OrgulhoePreconceito(JaneAusten)">Orgulho e Preconceito - Jane Austen</option>
-                    <option value="Verity(CollenHoover)">Verity - Collen Hoover</option>
-                    <option value="Heartstopper(AliceOseman)">Heartstopper - Alice Oseman</option>
-                    <option value="Deixadaparatrás(CharlieDonlea)">Deixada para trás - Charlie Donlea</option>
-                    <option value="Arevoluçãodosbichos(GeorgeOrwell)">A revolução dos bichos - George Orwell</option>
-                    <option value="Procurenascinzas(CharlieDonlea)">Procure nas cinzas - Charlie Donlea</option>
-                    <option value="HarryPottereaPedraFilosofal(J.K.Rowling)">Harry Potter e a Pedra Filosofal - J.K. Rowling</option>
-                    <option value="Ossetemaridosdeevelynhugo(TaylorJekinsReid)">Os Sete Maridos de Evelyn Hugo - Taylor Jekins Reid</option>
-                    <option value="Agarotadolago(CharlieDonlea)">A Garota do Lago - Charlie Donlea</option>
-                    <option value="Dracula(BramStoker)">Drácula - Bram Stoker</option>
-                </select>
+        </main>
+        <div class="editar">
+            <a href="/biblioteca/"><button class="add-button">Adicionar</button></a>
         </div>
-    </div>
-</main>
-    <div class="editar">
-        <a href="/biblioteca/"><button class="add-button">Adicionar</button></a>
-    </div>
-    <footer>
-        <div>
-            Desenvolvido por <a href="/sobreNos/">Danikawari</a>
-        </div>
-    </footer>
-</body>
+        <footer>
+            <div>
+                Desenvolvido por <a href="/sobreNos/">Danikawari</a>
+            </div>
+        </footer>
+    </body>
 </html>
