--- a/notificacoes/index.html
+++ b/notificacoes/index.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmoakBook</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-</head>
-<body>
-    <div class="header">
-            <div class="retangGreen">
-                <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
-                <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
-            </div>
-            <div class="retangOrange"></div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
-                <li><a href="/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
-                <li><a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
-                <li><a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
-                <li><a href="/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-                <li><a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-                <li><a href="/notificacoes/" class="active"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-                <li><a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-                <li><a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
-                <li><a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
-            </ul>
-        </nav>
-    </div>
-
-<main>
-    <h1 class="notificacao">Notificações</h1>
-
-    <div class="container">
-        <div class="lineSquare">
-           <p class="horario">há 10 minutos</p>
-           <div class="notify">
-                <img src="/imagens_telas/warning.png" alt="Imagem Aviso" class="aviso">
-                <p class="mensagem">Caro aluno, daqui 3 dias o livro reservado deverá ser devolvido.</p>
-            </div>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SmoakBook</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+    </head>
+    <body>
+        <div class="header">
+                <div class="retangGreen">
+                    <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
+                    <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+                </div>
+                <div class="retangOrange"></div>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a>
+                    </li>
+                    <li>
+                        <a href="/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a>
+                    </li>
+                    <li>
+                        <a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a>
+                    </li>
+                    <li>
+                        <a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a>
+                    </li>
+                    <li>
+                        <a href="/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a>
+                    </li>
+                    <li>
+                        <a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a>
+                    </li>
+                    <li>
+                        <a href="/notificacoes/" class="active"><span class="material-symbols-outlined">notifications</span>Notificações</a>
+                    </li>
+                    <li>
+                        <a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a>
+                    </li>
+                    <li>
+                        <a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a>
+                    </li>
+                    <li>
+                        <a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </div>
-</main>
-    <footer>
-        <div>
-            Desenvolvido por <a href="/sobreNos/">Danikawari</a>
-        </div>
-    </footer>
-</body>
+
+        <main>
+            <h1 class="notificacao">Notificações</h1>
+
+            <div class="container">
+                <div class="lineSquare">
+                    <p class="horario">há 10 minutos</p>
+                    <div class="notify">
+                        <img src="/imagens_telas/warning.png" alt="Imagem Aviso" class="aviso">
+                        <p class="mensagem">Caro aluno, daqui 3 dias o livro reservado deverá ser devolvido.</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+            <footer>
+                <div>
+                    Desenvolvido por <a href="/sobreNos/">Danikawari</a>
+                </div>
+            </footer>
+    </body>
 </html>
