--- a/perfilEditar/index.html
+++ b/perfilEditar/index.html
@@ -1,108 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmoakBook</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-</head>
-<body>
-    <div class="header">
-        <div class="retangGreen">
-            <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
-            <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
-        </div>
-        <div class="retangOrange"></div>
-    <nav class="navbar">
-        <ul>
-            <li><a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
-            <li><a href="/perfil/" class="active"><span class="material-symbols-outlined">person</span>Perfil</a></li>
-            <li><a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
-            <li><a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
-            <li><a href="/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-            <li><a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-            <li><a href="/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-            <li><a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-            <li><a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a></li>
-            <li><a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
-        </ul>
-    </nav>
-    </div>
-
-<main>
-    <h1 class="perfil">Perfil</h1>
-
-    <div class="parent-container">
-        <div class="p-i-container">
-            <div class="profile-container">
-                <div class="img-container">
-                    <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
-                </div>
-                <form action="/upload" method="post" enctype="multipart/form-data">
-                    <label for="fileInput" class="custom-file-upload">
-                        Escolher nova foto
-                    </label>
-                    <input type="file" id="fileInput" name="profileImage" accept="image/*">
-                </form>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SmoakBook</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+    </head>
+    <body>
+        <div class="header">
+            <div class="retangGreen">
+                <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
+                <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
             </div>
-            
-        
+            <div class="retangOrange"></div>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <a href="/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a>
+                </li>
+                <li>
+                    <a href="/perfil/" class="active"><span class="material-symbols-outlined">person</span>Perfil</a>
+                </li>
+                <li>
+                    <a href="/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a>
+                </li>
+                <li>
+                    <a href="/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a>
+                </li>
+                <li>
+                    <a href="/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a>
+                </li>
+                <li>
+                    <a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a>
+                </li>
+                <li>
+                    <a href="/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a>
+                </li>
+                <li>
+                    <a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a>
+                </li>
+                <li>
+                    <a href="/infoContato/"><span class="material-symbols-outlined">info</span>Informações</a>
+                </li>
+                <li>
+                    <a href="/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a>
+                </li>
+            </ul>
+        </nav>
+        </div>
 
-            <div class="input-container">
-                <div class="input-group">
-                    <p class="text-input">RM:</p>
-                    <input type="number" class="input-field input-rm" disabled>
+        <main>
+            <h1 class="perfil">Perfil</h1>
+            <div class="parent-container">
+                <div class="p-i-container">
+                    <div class="profile-container">
+                        <div class="img-container">
+                            <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
+                        </div>
+                        <form action="/upload" method="post" enctype="multipart/form-data">
+                            <label 
+                                for="fileInput" 
+                                class="custom-file-upload"
+                            >
+                                Escolher nova foto
+                            </label>
+                            <input type="file" id="fileInput" name="profileImage" accept="image/*">
+                        </form>
+                    </div>
+
+                    <div class="input-container">
+                        <div class="input-group">
+                            <p class="text-input">RM:</p>
+                            <input 
+                                type="number" 
+                                class="input-field input-rm" 
+                                disabled
+                            >
+                        </div>
+                        <div class="input-group">
+                            <p class="text-input">Nome social:</p>
+                            <input 
+                                type="text" 
+                                class="input-field"
+                            >
+                        </div>
+                        <div class="input-group">
+                            <p class="text-input">Nome completo:</p>
+                            <input 
+                                type="text" 
+                                class="input-field" 
+                                disabled
+                            >
+                        </div>
+                        <div class="input-group">
+                            <text class="text-input">E-mail:</text>
+                            <input 
+                                type="email" 
+                                class="input-field"
+                            >
+                        </div>
+                        <form class="sexo-form">
+                            <legend>Sexo:</legend>
+                            <label>
+                                <input 
+                                    type="radio" 
+                                    name="opcao" 
+                                    value="feminino"
+                                >
+                                    Feminino
+                            </label>
+                            <label>
+                                <input 
+                                    type="radio" 
+                                    name="opcao" 
+                                    value="masculino"
+                                >
+                                    Masculino
+                            </label>
+                            <label>
+                                <input 
+                                    type="radio" 
+                                    name="opcao" 
+                                    value="neutro"
+                                >
+                                    Neutro
+                            </label>
+                            <label>
+                                <input 
+                                    type="radio" 
+                                    name="opcao" 
+                                    value="padrao"
+                                >
+                                    Padrão
+                            </label>
+                        </form>
+                    </div>
                 </div>
-                <div class="input-group">
-                    <p class="text-input">Nome social:</p>
-                    <input type="text" class="input-field">
-                </div>
-                <div class="input-group">
-                    <p class="text-input">Nome completo:</p>
-                    <input type="text" class="input-field" disabled>
-                </div>
-                <div class="input-group">
-                    <text class="text-input">E-mail:</text>
-                    <input type="email" class="input-field">
-                </div>
-                <form class="sexo-form">
-                    <legend>Sexo:</legend>
-                    <label>
-                        <input type="radio" name="opcao" value="feminino">
-                        Feminino
-                    </label>
-                    <label>
-                        <input type="radio" name="opcao" value="masculino">
-                        Masculino
-                    </label>
-                    <label>
-                        <input type="radio" name="opcao" value="neutro">
-                        Neutro
-                    </label>
-                    <label>
-                        <input type="radio" name="opcao" value="padrao">
-                        Padrão
-                    </label>
-                </form>
             </div>
-        </div>
-    </div>
-    <div class="redefinir">
-        <a href="/esqueceuSenha1/">Esqueceu a senha?</a>
-    </div>
-    <div class="editar">
-        <a href="/perfil/"><button type="submit" class="save-button">Salvar</button></a>
-    </div>
-</main>
-    <footer>
-        <div>
-            Desenvolvido por <a href="/sobreNos/">Danikawari</a>
-        </div>
-    </footer>
-</body>
+            <div class="redefinir">
+                <a href="/esqueceuSenha1/">Esqueceu a senha?</a>
+            </div>
+            <div class="editar">
+                <a href="/perfil/">
+                    <button type="submit" class="save-button">Salvar</button>
+                </a>
+            </div>
+        </main>
+        <footer>
+            <div>
+                Desenvolvido por <a href="/sobreNos/">Danikawari</a>
+            </div>
+        </footer>
+    </body>
 </html>
