--- a/signUp/index.html
+++ b/signUp/index.html
@@ -1,53 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmoakBook</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="background">
-        <div class="container">
-            <div class="img-container">
-                <img src="/imagens_telas/img_cadastro.png" alt="Imagem tela de cadastro" class="imgCadastro">
-            </div>
-            <div class="conteudo">
-                <h1 class="cadastro">Cadastro</h1>
-                <input type="number" placeholder="RM" class="input-field">
-                <input type="text" placeholder="Nome completo" class="input-field">
-                <input type="email" placeholder="E-mail" class="input-field">
-                <div class="senha">
-                    <input type="password" placeholder="Senha" class="input-field senha-field">
-                    <input type="password" placeholder="Confirmar senha" class="input-field senha-field">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SmoakBook</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="background">
+            <div class="container">
+                <div class="img-container">
+                    <img src="/imagens_telas/img_cadastro.png" alt="Imagem tela de cadastro" class="imgCadastro">
                 </div>
-                <form class="sexo-form">
-                    <legend>Sexo:</legend>
+                <div class="conteudo">
+                    <h1 class="cadastro">Cadastro</h1>
+                    <input type="number" placeholder="RM" class="input-field">
+                    <input type="text" placeholder="Nome completo" class="input-field">
+                    <input type="email" placeholder="E-mail" class="input-field">
+                    <div class="senha">
+                        <input type="password" placeholder="Senha" class="input-field senha-field">
+                        <input type="password" placeholder="Confirmar senha" class="input-field senha-field">
+                    </div>
+                    <form class="sexo-form">
+                        <legend>Sexo:</legend>
 
-                    <label>
-                        <input type="radio" name="opcao" value="feminino">
-                        Feminino
-                    </label>
-                    <label>
-                        <input type="radio" name="opcao" value="masculino">
-                        Masculino
-                    </label>
-                    <label>
-                        <input type="radio" name="opcao" value="neutro">
-                        Neutro
-                    </label>
-                </form>
+                        <label>
+                            <input 
+                                type="radio" 
+                                name="opcao" 
+                                value="feminino"
+                            >
+                                Feminino
+                        </label>
+                        <label>
+                            <input 
+                                type="radio" 
+                                name="opcao" 
+                                value="masculino"
+                            >
+                                Masculino
+                        </label>
+                        <label>
+                            <input 
+                                type="radio" 
+                                name="opcao" 
+                                value="neutro"
+                            >
+                                Neutro
+                        </label>
+                    </form>
 
-                <div class="logar">
-                    Já tem uma conta? <a href="/login/">Faça login</a>
+                    <div class="logar">
+                        Já tem uma conta? <a href="/login/">Faça login</a>
+                    </div>
+                    <a href="/login/">
+                        <button type="submit" class="cadastro-button">Fazer cadastro</button>
+                    </a>
                 </div>
-                <a href="/login/"><button type="submit" class="cadastro-button">Fazer cadastro</button></a>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
