mudança do sobrenos da kawany

--- a/sobreNos/index.html
+++ b/sobreNos/index.html
@@ -33,9 +33,9 @@
 
                             <div class="membros">
                                 <img src="/imagens_telas/avatarKawany.jpeg" alt="Avatar Kawany" class="imagem-flutuante">
-                                <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se
-                                    verificar se era realmente isso que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer
-                                    das aulas, foi se interessando pelo back-end e pela segurança de dados.
+                                <text class="nome">Kawany: </text><text>ela sempre teve uma afinidade pelas questões jurídicas, entretanto permitiu-se verificar se era realmente isso 
+                                    que ela queria para a vida dela, ingressando na área de T.I. e conforme o decorrer das aulas, foi se interessando 
+                                    pelo banco de dados e pela segurança de dados.
                                 </text>
                             </div>
 
